--- a/src/theme/DocSidebar/Desktop/styles.module.css
+++ b/src/theme/DocSidebar/Desktop/styles.module.css
@@ -4,7 +4,11 @@
   padding: 0.5rem;
 }
 
-@media (min-width: 997px) {
+.sidebar {
+  display: none;
+}
+
+@media (--nav) {
   .versions {
     display: flex;
     align-items: center;
